   unencrypted volumes to also be automounted.
-- add a command line option to zuluMount-gui to start it up without showing the GUI 

version 4.6.3
-- fix a build issue on some systems
-- when automounting devices,use device LABEL if present
-- its now possible to create truecrypt volumes using a keyfile
-- its now possible to open a truecrypt hidden volume
-- add explicit support md raid based volumes
-- add context menu entry in zuluMount-gui to open shared mount point folder
-- its now possible to initiate volume mounting process of volumes in files by drag and drop them on zuluCrypt-gui and zuluMount-gui UI.
-- various bug fixes.
-- add ability to create and open truecrypt hidden volumes in the GUI

version 4.6.4
-- fix a build issue on some systems

version 4.6.5
-- add support for opening truecrypt system volumes
-- add internatiolization support
-- zuluMount-gui is now aware of volumes that are mounted or unmounted outside of it.This gives zuluMount-gui an ability to automount 
   newly attached devices.
-- encrypted volumes that reside in files can be opened simply by drag and drop them in zuluCrypt-gui or zuluMount-gui windows

version 4.6.6
-- fix a regression,retrieving keys from kwallet using volume UUID broke.
-- volumes in gnome are now stored in libsecret and no longer in libgnome-keyring
-- add a GUI window in zuluCrypt-gui to manage keys in libsecret wallet,internal wallet and kde kwallet.
-- add an internal system that can securely store keys independently of kde kwallet and gnome libsecret.Useful to those who
   want to store keys securely but dont want gnome or kde dependencies
-- add compile time option to use mount points in user home directory instead of "/run/media/private"   
-- NOTE: changes in management of wallets are not backward compatible and hence volumes will have to be readded after the update.My
   apologies for the inconvenience.