@@ -27,7 +27,6 @@ endif( NOT NOGNOME )
 pkg_check_modules( CRYPTSETUP libcryptsetup )
 pkg_check_modules( BLKID blkid ) 
 pkg_check_modules( PWQUALITY pwquality ) 
-pkg_check_modules( LIBMOUNT mount ) 
 pkg_check_modules( TCPLAY tcplay ) 
 
 set( PGR_VERSION "4.6.5+git" )
@@ -52,24 +51,6 @@ else( NOT BLKID_FOUND )
 		message ( FATAL_ERROR "ERROR: could not find libblkid.so" )
 	endif( blkid_lib )
 endif( NOT BLKID_FOUND )
- 
-if( NOT LIBMOUNT_FOUND )
-	message ( FATAL_ERROR "ERROR: could not find libmount package" )
-else( NOT LIBMOUNT_FOUND )
-	#add_definitions( "${LIBMOUNT_CFLAGS}" )
-	find_library( mountLibrary libmount.so )
-	if( NOT mountLibrary )
-		message ( FATAL_ERROR "ERROR: could not find libblkid.so" )
-	endif( NOT mountLibrary )
-	
-	find_file( newAPI libmount/libmount.h PATHS ${LIBMOUNT_INCLUDE_DIRS} )
-	
-	if( newAPI )
-		file( WRITE ${PROJECT_BINARY_DIR}/libmount_header.h "\n#define USE_UNSTABLE_LIBMOUNT_API 1\n#define USE_NEW_LIBMOUNT_API 1\n#include <libmount/libmount.h>\n")
-	else( newAPI )
-		file( WRITE ${PROJECT_BINARY_DIR}/libmount_header.h "\n#define USE_UNSTABLE_LIBMOUNT_API 1\n#define USE_NEW_LIBMOUNT_API 0\n#include <mount/mount.h>\n")
-	endif( newAPI )
-endif( NOT LIBMOUNT_FOUND )
 
 if( NOT CRYPTSETUP_FOUND )
 	message ( FATAL_ERROR "ERROR: could not find cryptsetup package" )
